--- a/SoFlu全自动测试平台教程/1. 快速入门/2. 如何配置环境.md
+++ b/SoFlu全自动测试平台教程/1. 快速入门/2. 如何配置环境.md
@@ -6,24 +6,34 @@
 
 ##### 1.2.1 操作步骤
 
-a）进入全自动测试平台，鼠标悬停在项目右下角的更多图标上，然后单击环境配置，进入环境配置。
+a）进入全自动测试平台，鼠标悬停在项目卡片右下角更多图标上，选择“环境配置”。
 
-![image](https://user-images.githubusercontent.com/79617492/183833895-0009f81b-c409-47ec-81ce-10d01693f2a0.png)
+![image](https://user-images.githubusercontent.com/79617492/184098552-0ea348f3-f5e1-4bcd-a49e-2d1376747906.png)
 
 ##### 图2-1 进入环境配置
 
-b）单击“+”新增环境配置，填写环境的基本信息。
+b）系统显示环境列表页面，单击“+”按钮即可新增环境，您需要首先填写环境配置的基本信息。
 
-c）在HTTP配置页签下，选择传输协议，填写域名或IP地址，选择所属接口，单击添加域名配置，最后单击保存环境配置即可。
+![image](https://user-images.githubusercontent.com/79617492/184098577-1b0b3161-db1a-4e9e-b2f5-a8beebcf7d04.png)
 
-![image](https://user-images.githubusercontent.com/79617492/183833907-4c7d7c16-048c-4ed2-b1ee-754a4c7a2af0.png)
+##### 图2-2 填写环境配置基本信息
 
-##### 图2-2 保存环境配置
+c）选择“HTTP配置”页签，选择传输协议https或http，再填写域名或IP地址；选择上方填写域名作用的接口，可选“所有”、“模块”或者“路径”。
 
 ##### 说明：
 
-##### c1）已添加的域名可在域名列表中双击编辑修改，再单击更新域名配置即可；若需添加多个域名配置，再进行相同操作即可。
+##### c1）若您选择“所有”，表示所有未指定模块或路径的接口都将使用该域名。
 
-##### c2）在环境配置中的请求头为全局请求头，如果在添加接口时未添加请求头，则在执行接口时会默认带上环境配置的请求头，如果在添加接口中指定了请求头，则执行接口时会带上接口指定的请求头。
+##### c2）若您选择“模块”，则需要继续选择具体的接口模块，表示该接口模块下的所有接口都将使用该域名。
 
-##### c3）更多环境配置使用详情，请参考[《SoFlu全自动测试平台教程操作指南第5.9节：新增环境配置》](https://gitee.com/feisuanyz/SoFlu-adp/blob/master/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/9.%20%E6%96%B0%E5%A2%9E%E7%8E%AF%E5%A2%83%E9%85%8D%E7%BD%AE.md)
+##### c3）若您选择“路径”，则需要继续填写具体的路径值，可以选择包含或者等于该路径值的情况，表示匹配到对应路径的接口都将使用该域名。
+
+d）根据实际需要添加请求头信息，所有信息填写完成后，单击添加域名配置即添加域名成功，可添加多个域名配置，且已添加的域名可在域名列表中双击进行修改，修改完成后单击更新域名配置即可。
+
+![image](https://user-images.githubusercontent.com/79617492/184098598-f0b73722-4195-4baa-9101-54debe115a3d.png)
+
+##### 图2-3 添加请求头信息
+
+##### 说明：环境配置中添加的请求头信息为全局请求头，若在接口管理中新增接口时未添加请求头，则在执行接口时会默认带上环境配置中的请求头信息，若新增接口时指定了请求头信息，则执行接口时会带上指定的请求头。
+
+e）HTTP配置完成后，单击保存环境配置即可。
