--- a/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/4. 项目授权.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/4. 项目授权.md
@@ -10,12 +10,12 @@
 
 a）进入全自动测试平台，单击项目授权图标。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184269677-4ba8c1f0-c2a2-4469-aff2-47871bfe7e88.png)
 
 ##### 图4-1 单击项目授权图标
 
 b）选择需要授权的用户，勾选已授权，然后单击保存即可。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/4-2.png)
+![image](https://user-images.githubusercontent.com/79617492/184269687-e6863ae9-d25a-4b61-88ef-21ceada3f032.png)
 
 ##### 图4-2 勾选已授权
