--- a/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/7. 导出项目.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/1. 项目管理/7. 导出项目.md
@@ -10,7 +10,7 @@
 
 a）进入全自动测试平台，选择需要导出的项目，单击导出项目图标。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/1.%20%E9%A1%B9%E7%9B%AE%E7%AE%A1%E7%90%86/7-1.png)
+![image](https://user-images.githubusercontent.com/79617492/184273836-4920d4bb-62c8-46f9-ba0d-b65ad9de7eca.png)
 
 ##### 图7-1 单击导出项目图标
 
