--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/1. 创建缺陷.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/1. 创建缺陷.md
@@ -7,3 +7,13 @@
 ##### 2.3.3.1 创建缺陷
 
 当测试出现问题时，用户可以通过创建缺陷对问题进行及时记录和管理。本节将为您具体介绍如何创建缺陷。
+
+##### 2.3.3.1.1 前提条件
+
+a）所在项目已集成好缺陷管理平台，具体可参见《SoFlu全自动测试平台教程操作指南第2.1.9节：集成缺陷管理平台》。
+
+b）所在项目已创建好需要的缺陷模板，并已选择好对应的缺陷模板和禅道项目ID，具体可参见《SoFlu全自动测试平台教程操作指南第2.2.3.4节：创建缺陷模版》以及《SoFlu全自动测试平台教程操作指南第1.1节：创建项目》。 
+
+##### 2.3.3.1.2 操作步骤
+
+a）进入项目的测试用例功能模块，切换到“缺陷管理”页面，单击创建缺陷，打开“新增缺陷”页面。
