--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/2. 提交缺陷.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/2. 提交缺陷.md
@@ -7,3 +7,11 @@
 ##### 2.3.3.2 提交缺陷
 
 创建好缺陷后，用户可通过提交缺陷将对应的缺陷同步到禅道系统上。本节为您具体介绍如何提交缺陷。
+
+##### 2.3.3.2.1 前提条件
+
+所在项目已存在创建好的缺陷。
+
+##### 2.3.3.2.2 操作步骤
+
+a）进入项目的测试用例功能模块，切换到“缺陷管理”页面，找到需要操作的缺陷，单击提交，弹出二次确认弹窗。
