--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/3. 同步缺陷信息.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/3. 同步缺陷信息.md
@@ -1,1 +1,11 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.3 缺陷管理
+
+##### 2.3.3.3 同步缺陷信息
+
+用户在全自动测试平台提交缺陷之后，可以在禅道系统对提交的缺陷进行管理。当禅道系统上缺陷的信息出现修改或状态发生变化时，用户可以通过在全自动测试平台同步缺陷信息以了解当前缺陷的最新信息和状态。本节将为您具体介绍如何同步缺陷信息。
+
+##### 2.3.3.3.1 前提条件
