--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/3. 同步缺陷信息.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/3. 缺陷管理/3. 同步缺陷信息.md
@@ -9,3 +9,13 @@
 用户在全自动测试平台提交缺陷之后，可以在禅道系统对提交的缺陷进行管理。当禅道系统上缺陷的信息出现修改或状态发生变化时，用户可以通过在全自动测试平台同步缺陷信息以了解当前缺陷的最新信息和状态。本节将为您具体介绍如何同步缺陷信息。
 
 ##### 2.3.3.3.1 前提条件
+
+所在项目已存在已提交的缺陷。
+
+##### 2.3.3.3.2 操作步骤
+
+a）进入项目的测试用例功能模块，切换到“缺陷管理”页面，单击同步缺陷信息即可。
+
+![输入图片说明](../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/3.%20%E7%BC%BA%E9%99%B7%E7%AE%A1%E7%90%86/3-1.png)
+
+##### 图3-1 单击同步缺陷信息
