--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/2. 执行测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/2. 执行测试场景.md
@@ -13,3 +13,13 @@
 ##### 2.3.4.1.2.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方测试场景，进入测试场景页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/2-1.png)
+
+##### 图2-1 进入测试场景页面
+
+b）单击测试场景管理，选择需要执行测试场景的测试用例，然后单击执行测试场景。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/2-2.png)
+
+##### 图2-2 执行测试场景
