--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/5. 导出测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/5. 导出测试场景.md
@@ -1,1 +1,15 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.4 接口测试
+
+##### 2.3.4.1 测试场景管理
+
+##### 2.3.4.1.5 导出测试场景
+
+本节介绍如何导出测试场景。
+
+##### 2.3.4.1.5.1 操作步骤
+
+a）进入全自动测试平台，单击页面上方接口测试，进入接口测试页面。
