--- a/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/5. 导出测试场景.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/3. 测试用例/4. 接口测试/1. 测试场景管理/5. 导出测试场景.md
@@ -13,3 +13,13 @@
 ##### 2.3.4.1.5.1 操作步骤
 
 a）进入全自动测试平台，单击页面上方接口测试，进入接口测试页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/5-1.png)
+
+##### 图5-1 进入接口测试页面
+
+b）单击测试场景管理，选中需要导出测试场景的测试用例，然后单击更多 > 导出场景，并选择导出格式进行导出，系统便会自动生成相应格式的测试场景文件。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/3.%20%E6%B5%8B%E8%AF%95%E7%94%A8%E4%BE%8B/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/1.%20%E6%B5%8B%E8%AF%95%E5%9C%BA%E6%99%AF%E7%AE%A1%E7%90%86/5-2.png)
+
+##### 图5-2 导出测试场景的测试用例
