--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/9. 测试数据库连接.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/1. SQL管理/9. 测试数据库连接.md
@@ -16,16 +16,16 @@
 
 a）进入全自动测试平台，单击页面上方测试场景 > SQL管理，进入SQL管理页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/9-1.png)
+![image](https://user-images.githubusercontent.com/79617492/190048333-b878e7d2-f99d-4030-b0aa-17d4d58c4513.png)
 
 ##### 图9-1 进入SQL管理页面
 
 b）选中需测试的数据库连接，单击修改按钮，进入编辑页面，在该页面单击测试按钮即可测试数据库是否连接成功。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/9-2.png)
+![image](https://user-images.githubusercontent.com/79617492/190048352-b9d69cec-07a2-4e4a-a037-e8df554bae26.png)
 
 ##### 图9-2 单击修改按钮
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/1.%20SQL%E7%AE%A1%E7%90%86/9-3.png)
+![image](https://user-images.githubusercontent.com/79617492/190048368-624a8061-e94f-4577-befd-105c6f719900.png)
 
 ##### 图9-3 测试数据库是否连接成功
