--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/2. 变量集/3. 删除变量集.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/2. 变量集/3. 删除变量集.md
@@ -16,16 +16,16 @@
 
 a）进入全自动测试平台，单击测试场景 > 变量集，进入变量集页面。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/3-1.png)
+![image](https://user-images.githubusercontent.com/79617492/190054639-2597957b-f8c1-4b84-9ca5-5cff52fe0056.png)
 
 ##### 图3-1 进入变量集页面
 
 b）选择需要删除的变量集，单击操作处的删除，系统弹出提示，单击确定即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/3-2.png)
+![image](https://user-images.githubusercontent.com/79617492/190054650-ea2432f3-84e3-42aa-819d-9d4e9229623c.png)
 
 ##### 图3-2 单击操作处的删除
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/2.%20%E5%8F%98%E9%87%8F%E9%9B%86/3-3.png)
+![image](https://user-images.githubusercontent.com/79617492/190054659-9de5a33f-e7b0-43bb-aafd-043adbeb6a2f.png)
 
 ##### 图3-3 单击确定
