--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/1. 新增Excel文件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/1. 新增Excel文件.md
@@ -15,3 +15,25 @@
 ##### 2.3.4.3.3.1.1 操作步骤
 
 a）进入项目的接口测试功能模块，切换到Excel管理页面，单击新增Excel文件，进入“新增Excel文件”页面。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/3.%20Excel%E7%AE%A1%E7%90%86/image.png)
+
+##### 图1-1 单击新增Excel文件
+
+b）在“新增Excel文件”页面，填写基本信息后，单击文件样例下载Excel模版。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/3.%20Excel%E7%AE%A1%E7%90%86/1-2.png)
+
+##### 图1-2 下载Excel模版
+
+c）打开下载的Excel模版，根据模版内容自定义填写数据，保存后关闭。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/3.%20Excel%E7%AE%A1%E7%90%86/1-3.png)
+
+##### 图1-3 自定义填写数据
+
+d）回到“新增Excel文件”页面，选择需要上传的文件，然后单击确定即可。
+
+![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/3.%20Excel%E7%AE%A1%E7%90%86/1-4.png)
+
+##### 图1-4 上传文件
