--- a/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/2. 下载Excel文件.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/4. 接口测试/3. 数据集管理/3. Excel管理/2. 下载Excel文件.md
@@ -16,6 +16,6 @@
 
 a）进入项目的接口测试功能模块，切换到Excel管理页面，找到需要下载的Excel文件，单击更多 > 下载即可。
 
-![输入图片说明](../../../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/4.%20%E6%8E%A5%E5%8F%A3%E6%B5%8B%E8%AF%95/3.%20%E6%95%B0%E6%8D%AE%E9%9B%86%E7%AE%A1%E7%90%86/3.%20Excel%E7%AE%A1%E7%90%86/2-1.png)
+![image](https://user-images.githubusercontent.com/79617492/190074346-a0d91f9f-4c59-428c-ba93-32027b8e42fa.png)
 
 ##### 图2-1 单击更多 > 下载
