--- a/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/2. 使用UI测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/5. UI测试/2. 使用UI测试.md
@@ -43,3 +43,23 @@ a）进入UI测试功能模块，在左侧用例列表选中需执行UI测试的
 ##### 图2-2 进入UI测试功能模块
 
 b）单击设置选项，系统弹出设置界面，此时您可以设置UI测试相关的执行属性，设置完成后，单击确定即可。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/5.%20UI%E6%B5%8B%E8%AF%95/2-3.png)
+
+##### 图2-3 设置UI测试相关的执行属性
+
+##### 说明：
+
+##### b1）页面加载超时时间：表示若页面加载时间超过设置的超时时间，当前步骤将执行失败。
+
+##### b2）截图设置：您可以选择对UI测试的执行过程进行截图，若不需要进行截图，选择“不截图”即可；若需要截图，则选择“自动截图”或者“失败截图”，其中“自动截图”表示无论步骤执行状态成功与否，每一个步骤都会截图，“失败截图”表示当步骤执行状态失败时进行截图。
+
+##### b3）窗口最大化：选择“是”，则打开浏览器时，窗口将最大化显示。
+
+##### b4）步骤失败：选择“继续”表示即使当前步骤失败仍会继续执行剩余步骤；选择“暂停”表示当前步骤失败，会立即停止执行整个测试。
+
+##### b5）无头模式： 即HeadLess，在执行脚本时不显示浏览器界面，在后台运行。
+
+##### b6）选择浏览器类型：UI测试可选的执行浏览器类型有Chrome、Firefox、IE、Edge，系统默认支持Chrome99版本、Firefox68以上版本、Edge103版本，IE无headless模式，不支持linux环境；若系统默认支持的浏览器版本与您当前浏览器版本不一致，则需要在对应浏览器官网下载您当前浏览器版本的驱动包，然后在节点引擎服务包driver文件夹中替换掉对应浏览器版本的驱动包即可。
+
+##### 2.3.5.2.2.2 创建UI测试动态参数
