--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/1. 创建接口性能测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/1. 创建接口性能测试.md
@@ -1,1 +1,15 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.1 创建接口性能测试
+
+接口性能测试是对接口功能进行的性能测试，即通过并发多条接口测试用例模拟多个用户调用同个接口来检测接口的负载能力、响应数据等。本节为您介绍如何创建接口性能测试。
+
+##### 2.3.6.1.1 前提条件
+
+a）存在可用的环境配置，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.1.9节：新增环境配置》；
+
+b）存在可用的资源池，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.2.2.1.2节：新增资源池》；
