--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/2. 创建UI性能测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/2. 创建UI性能测试.md
@@ -1,1 +1,19 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.2 创建接口性能测试
+
+UI性能测试是对前端界面进行的性能测试，通过并发多条相同的UI用例模拟多个用户操作同一界面来检测页面的加载速度。本节为您介绍如何创建UI性能测试。
+
+##### 2.3.6.2.1 前提条件
+
+a）存在可用的环境配置，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.1.9节：新增环境配置》；
+
+b）存在可用的资源池，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.2.2.1.2节：新增资源池》；
+
+c）存在已绑定测试场景的接口测试用例，具体操作可参考《SoFlu全自动测试平台教程操作指南第2.3.1.1节：新增测试用例》和《SoFlu全自动测试平台教程操作指南第2.4.1.1节：新建测试场景》；
+
+d）已配置好可用的AccessKey参数，具体操作请参见文档《SoFlu全自动测试平台教程操作指南第2.1.6节：配置AccessKey》。
