--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/4. 停止性能测试.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/4. 停止性能测试.md
@@ -12,7 +12,7 @@
 
 a）进入接口性能测试列表或者UI性能测试列表，选择需停止的性能测试，单击“更多 > 停止测试”。
 
-![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/4-1.png)
+![image](https://user-images.githubusercontent.com/79617492/190991510-1a88dc0e-cdb7-487d-ac4c-789f9f9e3058.png)
 
 ##### 图4-1 单击“更多 > 停止测试”
 
