--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/6. 对比性能测试报告.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/6. 对比性能测试报告.md
@@ -1,1 +1,15 @@
-test
+### 2. 操作指南
+
+#### 2.3 测试用例
+
+##### 2.3.6 性能测试
+
+##### 2.3.6.6 对比性能测试报告
+
+通过对比性能测试报告，用户可以直观地看到两份报告间负载、响应时间等数据对比信息。
+
+本节将为您具体介绍如何对比性能测试报告。
+
+##### 2.3.6.6.1 操作步骤
+
+a）进入全自动测试平台，单击性能测试 > 接口测试管理，进入性能测试列表页面。
