--- a/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/6. 对比性能测试报告.md
+++ b/SoFlu全自动测试平台教程/2. 操作指南/6. 性能测试/6. 对比性能测试报告.md
@@ -13,3 +13,11 @@
 ##### 2.3.6.6.1 操作步骤
 
 a）进入全自动测试平台，单击性能测试 > 接口测试管理，进入性能测试列表页面。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/6-1.png)
+
+##### 图6-1 进入性能测试列表页面
+
+b）选择对应性能测试，单击更多 > 测试报告，进入测试报告列表页面。
+
+![输入图片说明](../../../images/SoFlu%E5%85%A8%E8%87%AA%E5%8A%A8%E6%B5%8B%E8%AF%95%E5%B9%B3%E5%8F%B0%E6%95%99%E7%A8%8B/2.%20%E6%93%8D%E4%BD%9C%E6%8C%87%E5%8D%97/6.%20%E6%80%A7%E8%83%BD%E6%B5%8B%E8%AF%95/6-2.png)
